src/test/ui/lazy-type-alias-impl-trait/branches3.stderr
error[E0282]: type annotations needed
  --> $DIR/branches3.rs:8:10
   |
LL |         |s| s.len()
   |          ^
   |
   = note: type must be known at this point
help: consider giving this closure parameter an explicit type
   |
LL |         |s: _| s.len()
   |           +++

error[E0282]: type annotations needed
  --> $DIR/branches3.rs:15:10
   |
LL |         |s| s.len()
   |          ^
   |
   = note: type must be known at this point
help: consider giving this closure parameter an explicit type
   |
LL |         |s: _| s.len()
   |           +++

error[E0282]: type annotations needed
  --> $DIR/branches3.rs:23:10
   |
LL |         |s| s.len()
   |          ^
   |
   = note: type must be known at this point
help: consider giving this closure parameter an explicit type
   |
LL |         |s: _| s.len()
   |           +++

error[E0282]: type annotations needed
  --> $DIR/branches3.rs:30:10
   |
LL |         |s| s.len()
   |          ^
   |
   = note: type must be known at this point
help: consider giving this closure parameter an explicit type
   |
LL |         |s: _| s.len()
   |           +++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0282`.
